samples/_failures_safe/1761283661_dcc3cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc8a4005.c: In function ‘main’:
./samples/SAFE/__tmp_cc8a4005.c:176:20: error: expected ‘)’ at end of input
  176 |         if (len > 0
      |            ~       ^
      |                    )
./samples/SAFE/__tmp_cc8a4005.c:176:9: error: expected declaration or statement at end of input
  176 |         if (len > 0
      |         ^~
./samples/SAFE/__tmp_cc8a4005.c:176:9: error: expected declaration or statement at end of input
